--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -272,20 +272,8 @@ jobs:
 
       - name: Install criu
         run: |
-          sudo apt-get install -y \
-            libprotobuf-dev \
-            libprotobuf-c-dev \
-            protobuf-c-compiler \
-            protobuf-compiler \
-            python-protobuf \
-            libnl-3-dev \
-            libnet-dev \
-            libcap-dev \
-            python-future
-          wget https://github.com/checkpoint-restore/criu/archive/v3.13.tar.gz -O criu.tar.gz
-          tar -zxf criu.tar.gz
-          cd criu-3.13
-          sudo make install-criu
+          sudo add-apt-repository -y ppa:criu/ppa
+          sudo apt-get install -y --no-install-recommends criu
 
       - name: Install containerd
         env:
